# Camera-Set-Addon

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  render-camera-set.py  sample_scene.blend
camera-set/: Panel.py  __init__.py  operator.py
pictures/: icon-camera-set.kra  icon.kra
